swip swipe-item样式初始化完成

--- a/src/assets/css/swipe.styl
+++ b/src/assets/css/swipe.styl
@@ -5,11 +5,10 @@ $lui-swipe-indicator =  6px
   overflow hidden
   position relative
   user-select none
-  // 包含i
   &__track
     height 100%
-// 每个swipe-item子项
-  &-item
+
+  &-item // 每个item子项目
     float left
     height 100%
   &__indicators
