--- a/src/assets/css/notice-bar.styl
+++ b/src/assets/css/notice-bar.styl
@@ -40,7 +40,7 @@
 
 @keyframes lui-notice-bar-play
   to
-    tranform translate3d(-100%, 0, 0)
+    transform translate3d(-100%, 0, 0)
 @keyframes lui-notice-bar-play-infinite
   to
     transform translate3d(-100%,0,0)
